style(mds-card): ensure layout overflow prevent

--- a/projects/stencil/src/components/mds-card-footer/mds-card-footer.css
+++ b/projects/stencil/src/components/mds-card-footer/mds-card-footer.css
@@ -10,6 +10,7 @@
   display: flex;
   flex-grow: 1;
   justify-content: flex-end;
+  min-width: 0;
 }
 
 @import '../../tailwind/fouc.css';
