--- a/projects/stencil/src/components/mds-card-media/mds-card-media.css
+++ b/projects/stencil/src/components/mds-card-media/mds-card-media.css
@@ -3,6 +3,7 @@
 :host {
   background-color: theme('colors.tone-neutral-09');
   display: grid;
+  min-width: 0;
   position: relative;
 }
 
